--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: PlantTracker
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
+Date: 2021-04-06
 Authors@R: 
     person(given = "First",
            family = "Last",
