--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: PlantTracker
 Title: Extract Demographic Data from Quadrat Maps
 Version: 0.0.0.9000
-Date: 2021-04-06
+Date: 2021-05-04
 Authors@R: 
     person(given = "Alice",
            family = "Stears",
@@ -19,3 +19,9 @@ Depends:
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Imports: 
+    Matrix,
+    igraph,
+    sf,
+    dplyr,
+    tidyr
