fixing package dependencies and documentation, etc.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export(adding)
 export(assign)
 export(groupByGenet)
 import(Matrix)
-import(dplyr)
 import(sf)
 importFrom(igraph,clusters)
-importFrom(tidyr,pivot_wider)
+importFrom(igraph,graph_from_adjacency_matrix)
+importFrom(methods,as)
+importFrom(stats,aggregate)
+importFrom(stats,reshape)
