working on drawQuadMap() and updating documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,10 @@
 export(adding)
 export(aggregateByGenet)
 export(checkDat)
+export(drawQuadMap)
+export(getBasalAreas)
 export(getNeighbors)
+export(getRecruits)
 export(groupByGenet)
 export(trackSpp)
 import(Matrix)
