--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,10 @@ export(groupByGenet)
 export(trackSpp)
 import(Matrix)
 import(sf)
+importFrom(grDevices,hcl.colors)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
+importFrom(graphics,par)
 importFrom(igraph,clusters)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(methods,as)
