update the documentation for help files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(aggregateByGenet)
 export(checkDat)
 export(drawQuadMap)
 export(getBasalAreas)
+export(getLambda)
 export(getNeighbors)
 export(getRecruits)
 export(groupByGenet)
