--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,4 +19,6 @@ importFrom(igraph,clusters)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(methods,as)
 importFrom(stats,aggregate)
+importFrom(stats,qnorm)
 importFrom(stats,reshape)
+importFrom(stats,sd)
