--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: PlantTracker
+Package: plantTracker
 Title: Extract Demographic Data from Quadrat Maps
 Version: 0.0.0.9000
 Date: 2021-09-20
