re-documenting package AND adding an option so the output of 'getNeighbors()' has count/area listed by species for each indivdiual

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,3 +22,4 @@ importFrom(stats,aggregate)
 importFrom(stats,qnorm)
 importFrom(stats,reshape)
 importFrom(stats,sd)
+importFrom(units,drop_units)
