--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Depends: 
     R (>= 2.10)
 Suggests: 
@@ -30,6 +30,7 @@ Imports:
     stats,
     ggplot2,
     graphics,
-    grDevices
+    grDevices,
+    units
 VignetteBuilder: knitr
 Language: en-US
