--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Suggests:
     testthat (>= 3.0.0),
     knitr,
     rmarkdown,
-    spelling
+    spelling,
+    minidown
 Config/testthat/edition: 3
 Imports: 
     Matrix,
