--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,7 +48,8 @@ Suggests:
     knitr,
     rmarkdown,
     spelling,
-    minidown
+    minidown,
+    ggplot2
 Config/testthat/edition: 3
 Imports: 
     Matrix,
@@ -56,7 +57,6 @@ Imports:
     sf,
     methods,
     stats,
-    ggplot2,
     graphics,
     grDevices,
     units
