--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: plantTracker
-Title: Extract Demographic and Competition Data from Fine-scale Maps
+Title: Extract Demographic and Competition Data from Fine-Scale Maps
 Version: 1.0.1
 Date: 2022-10-14
 Authors@R: c(person(given = "Alice",
@@ -17,14 +17,14 @@ Authors@R: c(person(given = "Alice",
            email = "datkins8@uwyo.edu"))
 Author: Alice Stears [aut, cre] (<https://orcid.org/0000-0002-1325-6641>), Jared Studyvin [aut], David Atkins [aut]
 Maintainer: Alice Stears <alice.e.stears@gmail.com>
-Description: This package contains functions to extract growth, survival, 
-  and local neighborhood density information from repeated, fine-scale maps of 
-  organism occurrence. Further information about this package can be found in our 
-  journal article, "plantTracker: An R package to translate maps of plant 
-  occurrence into demographic data" published in 2022 in Methods in Ecology and 
-  Evolution (Stears, et al., 2022) <doi.org/10.1111/2041-210X.13950>. 
+Description: Extracts growth, survival, and local neighborhood density 
+  information from repeated, fine-scale maps of organism occurrence. Further 
+  information about this package can be found in our journal article, 
+  "plantTracker: An R package to translate maps of plant occurrence into 
+  demographic data" published in 2022 in Methods in Ecology and Evolution 
+  (Stears, et al., 2022) <doi:10.1111/2041-210X.13950>. 
 License: MIT + file LICENSE
-URL: http://github.com/aestears/plantTracker
+URL: https://github.com/aestears/plantTracker
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
